Update SEO meta tags for Google

--- a/web/index.html
+++ b/web/index.html
@@ -12,19 +12,35 @@
   <!-- Viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Title (Arabic + English) -->
-  <title>متجر Tactical 729 | أكبر متجر تكتيكي في اليمن</title>
+  <!-- ✅ Title (Google Title قوي جدًا) -->
+  <title>
+    Tactical 729 | متجر المعدات التكتيكية والعسكرية الأول في اليمن 🇾🇪
+  </title>
 
-  <!-- SEO Description (Strong Tactical Description Arabic + English) -->
+  <!-- ✅ SEO Description (يظهر تحت الرابط في Google بشكل جذاب) -->
   <meta name="description"
-        content="متجر Tactical 729 هو أكبر متجر تكتيكي في اليمن، يوفر كل ما تحتاجه من المعدات والتجهيزات التكتيكية والعسكرية: بدلات تكتيكية، جواكت ميدانية، نظارات حماية، درابيل ومناظير، جيوب وحقائب قتالية، إكسسوارات وتجهيزات خارجية بجودة عالية وشحن سريع داخل اليمن وخارجها. | Tactical 729 Store is the largest tactical store in Yemen, offering everything you need in military and tactical gear: tactical uniforms, field jackets, protective eyewear, binoculars and scopes, combat pouches and bags, outdoor equipment, and premium supplies with fast delivery in Yemen and worldwide.">
+        content="Tactical 729 هو المتجر التكتيكي والعسكري رقم 1 في اليمن 🇾🇪. نوفر معدات أصلية للقوات الخاصة ومحبي المغامرات: سترات قتالية، بدلات تكتيكية، خوذات، نظارات حماية، حقائب وجيوب عسكرية، وتجهيزات ميدانية بجودة عالية مع شحن سريع داخل اليمن وخارجها.">
 
-  <!-- Keywords -->
+  <!-- ✅ Keywords (قوية جدًا لمحركات البحث) -->
   <meta name="keywords"
-        content="Tactical 729, أكبر متجر تكتيكي في اليمن, متجر تكتيكي, معدات عسكرية, تجهيزات تكتيكية, بدلات تكتيكية, جواكت عسكرية, نظارات تكتيكية, درابيل ومناظير, جيوب قتالية, tactical gear Yemen, military store Yemen">
+        content="
+        Tactical 729,
+        متجر تكتيكي اليمن,
+        معدات عسكرية اليمن,
+        تجهيزات القوات الخاصة,
+        بدلات تكتيكية,
+        سترات قتالية,
+        خوذات,
+        نظارات حماية,
+        حقائب عسكرية,
+        tactical gear Yemen,
+        military store Yemen,
+        متجر معدات تكتيكية صنعاء,
+        متجر عسكري عدن
+        ">
 
   <!-- Author -->
-  <meta name="author" content="Tactical 729 Store">
+  <meta name="author" content="Tactical 729 Store Yemen">
 
   <!-- Canonical -->
   <link rel="canonical" href="https://tactical729.com/">
@@ -32,33 +48,32 @@
   <!-- Robots -->
   <meta name="robots" content="index, follow">
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="متجر Tactical 729 | أكبر متجر تكتيكي في اليمن">
+  <!-- ✅ Open Graph (فيسبوك + واتساب + تيليجرام) -->
+  <meta property="og:title" content="Tactical 729 | متجر المعدات التكتيكية الأول في اليمن 🇾🇪">
   <meta property="og:description"
-        content="أكبر متجر تكتيكي في اليمن يوفر بدلات، جواكت، نظارات، درابيل، جيوب وتجهيزات عسكرية وتكتيكية أصلية بجودة عالية وشحن سريع.">
+        content="أفضل متجر عسكري وتكتيكي في اليمن يوفر معدات أصلية: سترات، بدلات، خوذات، نظارات، حقائب وتجهيزات ميدانية مع شحن سريع.">
   <meta property="og:url" content="https://tactical729.com/">
   <meta property="og:type" content="website">
+  <meta property="og:locale" content="ar_YE">
   <meta property="og:image" content="https://tactical729.com/icons/Icon-512.png">
 
-  <!-- Twitter Card -->
+  <!-- ✅ Twitter Preview -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="متجر Tactical 729 | أكبر متجر تكتيكي في اليمن">
+  <meta name="twitter:title" content="Tactical 729 | متجر المعدات التكتيكية الأول في اليمن">
   <meta name="twitter:description"
-        content="تسوق أفضل المعدات التكتيكية والعسكرية في اليمن: بدلات، جواكت، نظارات، درابيل، جيوب وتجهيزات أصلية مع شحن سريع.">
+        content="تسوق أفضل المعدات العسكرية والتكتيكية في اليمن 🇾🇪 مع شحن سريع وجودة أصلية.">
   <meta name="twitter:image" content="https://tactical729.com/icons/Icon-512.png">
 
-  <!-- iOS + PWA -->
+  <!-- ✅ PWA + Mobile -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
   <!-- App Name -->
-  <meta name="apple-mobile-web-app-title" content="Tactical 729 | متجر تكتيكي">
+  <meta name="apple-mobile-web-app-title" content="Tactical 729 Yemen">
 
-  <!-- Apple Icon -->
+  <!-- Icons -->
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Manifest -->
@@ -69,17 +84,6 @@
 
   <!-- Sitemap -->
   <link rel="sitemap" type="application/xml" href="https://tactical729.com/sitemap.xml">
-
-  <!-- Disable Old Service Worker Cache -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.getRegistrations().then((registrations) => {
-        for (let registration of registrations) {
-          registration.unregister();
-        }
-      });
-    }
-  </script>
 
 </head>
 
